<resources>
    <string name="app_name">MyCalc</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_div">/</string>
    <string name="key_equals">=</string>
    <string name="key_sum">+</string>
    <string name="key_sub">-</string>
    <string name="key_mult">*</string>
    <string name="key_clean">AC</string>
    <string name="key_exhibitor">e</string>
    <string name="key_percent">%</string>
    <string name="def_theme">Тема по умолчанию</string>
    <string name="light_theme">Светлая тема</string>
    <string name="dark_theme">Темная тема</string>
</resources>